A-10C campaigns